--- a/demo1-html/07表单.html
+++ b/demo1-html/07表单.html
@@ -27,6 +27,8 @@
                 checkbox    多选框
                 hidden 隐藏域   不显示在页面上，提交时会携带
             textarea    文本域
+            select  下拉框
+                option 选项
 
      -->
 
