--- a/demo3-js/12jsDOM编程处理事件.html
+++ b/demo3-js/12jsDOM编程处理事件.html
@@ -44,5 +44,6 @@
   <body>
     <div id="d1" class="div1"></div>
     <button id="btn1">按钮</button>
+    <a href="13jsBOM编程常见API.html">下一页</a>
   </body>
 </html>
